Fix modal overlay not covering all

--- a/style.css
+++ b/style.css
@@ -118,6 +118,8 @@ main {
 
 .modal-container {
 	position: fixed;
+	top: 0;
+	left: 0;
 	height: 100%;
 	width: 100%;
 	display: none;
@@ -131,7 +133,7 @@ main {
 .modal-container.active .modal {
 	opacity: 1;
 	pointer-events: auto;
-	transform: translate(-50%, -50%) scale(1);
+	transform: translate(-50%, -50%);
 }
 
 .modal {
